[package]
name = "presenterm"
authors = ["Matias Fontanini"]
description = "A terminal slideshow presentation tool"
repository = "https://github.com/mfontanini/presenterm"
license = "BSD-2-Clause"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1"
ansi-parser = "0.9"
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.4", features = ["derive", "string"] }
comrak = { version = "0.34", default-features = false }
crossterm = { version = "0.28", features = ["serde"] }
directories = "6.0"
hex = "0.4"
flate2 = "1.0"
image = { version = "0.25", features = ["gif", "jpeg", "png", "rayon"], default-features = false }
sixel-rs = { version = "0.4.1", optional = true }
merge-struct = "0.1.0"
itertools = "0.14"
once_cell = "1.19"
rand = "0.8.5"
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_with = "3.6"
socket2 = "0.5.8"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.10"
tl = "0.7"
thiserror = "2"
unicode-width = "0.2"
os_pipe = "1.1.5"
libc = "0.2"

[dependencies.syntect]
version = "5.2"
default-features = false
features = ["parsing", "default-themes", "regex-onig", "plist-load"]

[dev-dependencies]
rstest = { version = "0.24", default-features = false }

[features]
default = []
sixel = ["sixel-rs"]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
