[package]
name = "presenterm"
authors = ["Matias Fontanini"]
description = "A terminal slideshow presentation tool"
repository = "https://github.com/mfontanini/presenterm"
license = "BSD-2-Clause"
version = "0.15.1"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.4", features = ["derive", "string", "env"] }
comrak = { version = "0.47.0", default-features = false }
crossterm = { version = "0.29", default-features = false, features = ["events", "windows"] }
directories = "6.0"
hex = "0.4"
fastrand = "2.3"
flate2 = "1.0"
image = { version = "0.25", features = ["gif", "jpeg", "png"], default-features = false }
sixel-rs = { version = "0.4.1", optional = true }
merge-struct = "0.1.0"
itertools = "0.14"
once_cell = "1.19"
portable-pty = "0.9"
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
syntect = { version = "5.2", features = ["parsing", "default-themes", "regex-onig", "plist-load"], default-features = false }
socket2 = "0.6"
strum = { version = "0.27", features = ["derive"] }
tempfile = { version = "3.10", default-features =  false }
tl = "0.7"
thiserror = "2"
unicode-width = "0.2"
os_pipe = "1.1.5"
libc = "0.2"
vte = "0.15"
vt100 = "0.16"

[dev-dependencies]
rstest = { version = "0.26", default-features = false }

[features]
default = []
sixel = ["sixel-rs"]
json-schema = ["dep:schemars"]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
